--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,18 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <style>
+    <link rel="stylesheet" href="../src/style.scss">
+    <!-- <style>
       * {
         font-family: "Open Sans", sans-serif;
         margin: 0;
-      }
+      } -->
     </style>
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="../src/index.js"></script>
   </body>
 </html>
