add title and icons

--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../src/style.scss">
-    <!-- <style>
-      * {
-        font-family: "Open Sans", sans-serif;
-        margin: 0;
-      } -->
-    </style>
-    <title>React App</title>
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <title>Summer Chat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
